k8s/40-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: treba
  namespace: treba-stage5
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: treba-backend
                port:
                  number: 5000
          - path: /ping
            pathType: Prefix
            backend:
              service:
                name: treba-backend
                port:
                  number: 5000
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: treba-backend
                port:
                  number: 5000
          - path: /uploads
            pathType: Prefix
            backend:
              service:
                name: treba-backend
                port:
                  number: 5000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: treba-frontend
                port:
                  number: 3000
